--- a/themes/lightbi/layouts/partials/head.html
+++ b/themes/lightbi/layouts/partials/head.html
@@ -26,7 +26,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-<meta name="description" content="Wizbi tales is a Malayalam blog in which you can read the tales and thoughts of a seeker with a little bit of magic.">
+<meta name="description" content="LightBi is a simple, minimal personal website and blog theme for Hugo built by Bino Kochumol Varghese">
 <!-- Site Title, Description, Author, and Favicon -->
 {{ if .IsHome }}
 
@@ -53,8 +53,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
-<!-- <script data-ad-client="ca-pub-4397746851125244" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-
 
 {{- partial "head_custom.html" . }}
 {{ template "_default/google_analytics_async.html" . }}
