--- a/themes/lightbi/layouts/partials/footer.html
+++ b/themes/lightbi/layouts/partials/footer.html
@@ -62,10 +62,11 @@
           {{ end }}
         </p>
         <!-- Please don't remove this, keep my open source work credited :) -->
-        <!-- <p class="credits theme-by text-muted">
+
+          <p class="credits theme-by text-muted">
           {{ i18n "poweredBy" . | safeHTML }}
           {{ if $.GitInfo }}&nbsp;&bull;&nbsp;[<a href="{{ .Site.Params.commit }}{{ .GitInfo.Hash }}">{{ substr .GitInfo.Hash 0 8 }}</a>]{{ end }}
-        </p> -->
+        </p>
       </div>
     </div>
   </div>
@@ -99,6 +100,12 @@
   })();
 </script>
 {{ end }}
+{{- if  .Site.Params.useHLJS }}
+<script src="{{ "js/highlight.min.js" | absURL }}"></script>
+<script> hljs.initHighlightingOnLoad(); </script>
+<script> $(document).ready(function() {$("pre.chroma").css("padding","0");}); </script>
+{{- end -}}
+<script> renderMathInElement(document.body); </script>
 
 
 
