--- a/themes/lightbi/layouts/index.html
+++ b/themes/lightbi/layouts/index.html
@@ -3,38 +3,45 @@
 <div class="intro-header no-img mt-10">
 </div>
 
-  <div class="container" role="main">
-    <div class="row"> 
-        {{ with .Content }}
-          <div class="well">
-            {{.}}
-          </div>
-        {{ end }}
- 
-        
-        {{ $pag := .Paginate (where site.RegularPages "Type" "in" site.Params.mainSections ) 6 }}
-        {{ range $pag.Pages }}
-        {{ partial "post_preview" . }}
-        {{ end }}
-
-
-      </div>
+<div class="container" role="main">
+  <div class="container">
+    <div class="row">
+      {{ template "partials/carousel.html" . }}
     </div>
-  
-    <div class="container">
-     <div class="row font-sans"> 
-       <div class="col-md-12 mt-10">
-          <nav aria-label="Page navigation">
-          <ul class= "pagination justify-content-end">  
-  
-          {{ template "_internal/pagination.html" . }} 
+  </div>
+
+  <div class="container">
+    <div class="row">
+      {{ with .Content }}
+      <div class="well">
+        {{.}}
+      </div>
+      {{ end }}
+
+      {{ $pag := .Paginate (where site.RegularPages "Type" "in" site.Params.mainSections ) 6 }}
+
+      {{ range $pag.Pages }}
+      {{ partial "post_preview" . }}
+      {{ end }}
+
+    </div>
+  </div>
+
+
+
+  <div class="container mt-3">
+    <div class="row ">
+      <div class="col-md-12">
+        <nav aria-label="Page navigation">
+          <ul class="pagination justify-content-end">
+            {{ template "_internal/pagination.html" . }}
           </ul>
-          </div>
-        </div>
-        </nav>
-        
-        </div>
       </div>
     </div>
-    
-  {{ end }}
+    </nav>
+  </div>
+
+</div>
+</div>
+</div>
+{{ end }}
