--- a/themes/lightbi/layouts/partials/nav.html
+++ b/themes/lightbi/layouts/partials/nav.html
@@ -1,34 +1,49 @@
-  <nav class="navbar navbar-expand-md navbar-light  fixed-top "> 
-      <a class="navbar-brand" href="{{ "" | absLangURL }}">{{ .Site.Title }}</a>
-       
-      <button class="navbar-toggler" type="button"  data-toggle="collapse" data-target="#main-navbar"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="sr-only">{{ i18n "toggleNavigation" }}</span>
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
+<nav class="navbar navbar-expand-lg navbar-light sticky-top fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{{ "" | absLangURL }}">{{ .Site.Title }}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" 
+    aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <div class="collapse navbar-collapse" id="main-navbar">
-      <ul class="navbar-nav ml-auto ">
-        {{ range .Site.Menus.main.ByWeight }}
-          {{ if .HasChildren }}
-            <li class="nav-item">
-              <a class="nav-link">{{ .Name }}</a>
-              <div class="navlinks-children">
-                {{ range .Children }}
-                  <a href="{{ .URL | relLangURL }}">{{ .Name }}</a>
-                {{ end }}
-              </div>
-            </li>
-          {{ else }}
-          
-            <li class="nav-item">
-              <a class="nav-link" title="{{ .Name }}" href="{{ .URL  | relLangURL }}">{{ .Name }}</a>
-            </li>
+  <div class="collapse navbar-collapse" id="main-navbar">
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      {{ range .Site.Menus.main.ByWeight }}
+      {{ if .HasChildren }}
+      <li class="nav-item">
+        <a class="nav-link">{{ .Name }}</a>
+        <div class="navlinks-children">
+          {{ range .Children }}
+          <a href="{{ .URL | relLangURL }}">{{ .Name }}</a>
           {{ end }}
-        {{ end }}
- 
-      </ul>
+        </div>
+      </li>
+      {{ else }}
+
+      <li class="nav-item">
+        <a class="nav-link" title="{{ .Name }}" href="{{ .URL  | relLangURL }}">{{ .Name }}</a>
+      </li>
+      {{ end }}
+      {{ end }}
+
+    </ul>
+  </div>
   </div>
 </nav>
- 
+
+<!-- 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">Hidden brand</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+   
+    </div>
+  </div>
+</nav> -->
