--- a/themes/lightbi/layouts/index.html
+++ b/themes/lightbi/layouts/index.html
@@ -5,7 +5,7 @@
 
 <div class="container" role="main">
 
-  <!-- Need to diplay the featured posts in page first page only  -->
+  <!-- Diplay the featured posts in first page only  -->
   {{ $paginator := .Paginator }} 
   
   {{ if eq $paginator.PageNumber 1 }}
