--- a/themes/lightbi/layouts/_default/list.html
+++ b/themes/lightbi/layouts/_default/list.html
@@ -1,30 +1,34 @@
-{{ define "main" }}
-  <div class="container" role="main">
-    <div class="row">
-      <div class="col-md-12">
-        {{ with .Content }}
-          <div class="well">
-            {{.}}
-          </div>
-        {{ end }}
-        <div class="row">  
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="container">
-   <div class="row font-sans"> 
-     <div class="col-md-12 mt-10">
-        <nav aria-label="Page navigation"> 
-        <ul class= "pagination justify-content-end">    
-        {{ template "_internal/pagination.html" . }} 
-        </ul>
+{{ define "main" }}
+<div class="container" role="main">
+  <div class="row">
+    <div class="col-md-12">
+      {{ with .Content }}
+        <div class="well">
+          {{.}}
         </div>
-      </div>
-      </nav> 
+      {{ end }} 
+      <div class="row">
+        {{ range .Paginator.Pages }}
+          {{ partial "post_preview.html" .}}
+        {{ end }}
       </div>
     </div>
   </div>
-  
+</div>
+
+<div class="container">
+ <div class="row font-sans"> 
+   <div class="col-md-12 mt-10">
+      <nav aria-label="Page navigation"> 
+      <ul class= "pagination justify-content-end">    
+      {{ template "_internal/pagination.html" . }} 
+      </ul>
+      </div>
+    </div>
+    </nav> 
+    </div>
+  </div>
+</div>
+
 {{ end }}
