--- a/themes/lightbi/layouts/index.html
+++ b/themes/lightbi/layouts/index.html
@@ -1,48 +1,39 @@
 {{ define "main" }}
 
-<div class="intro-header no-img mt-10">
+<div class="intro-header no-img">
 </div>
 
 <div class="container" role="main">
+  <div class="row">
+    {{ with .Content }}
+    <div class="well">
+      {{.}}
+    </div>
+    {{ end }}
 
-  <!-- Diplay the featured posts in first page only  --> 
-  {{ if eq .Paginator.PageNumber 1 }}
-  <div class="container">
-    <div class="row">
-      {{ template "partials/carousel.html" . }}
+
+    {{ $pag := .Paginate (where site.RegularPages "Type" "in" site.Params.mainSections ) 9 }}
+    {{ range $pag.Pages }}
+    {{ partial "post_preview" . }}
+    {{ end }}
+
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="row font-sans">
+    <div class="col-md-12 mt-10">
+      <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-end">
+          {{ template "_internal/pagination.html" . }}
+        </ul>
+      </nav>
     </div>
   </div>
-  {{ end }}
-
-  <div class="container">
-    <div class="row">
-      {{ with .Content }}
-      <div class="well">
-        {{.}}
-      </div>
-      {{ end }}
- 
-      {{ range where (.Paginator 6).Pages "Section" "post"}}
- 
-      {{ partial "post_preview" . }}
-      {{ end }}
-
-    </div>
-  </div>
-
-  <div class="container mt-3">
-    <div class="row ">
-      <div class="col-md-12">
-        <nav aria-label="Page navigation">
-          <ul class="pagination justify-content-end">
-            {{ template "_internal/pagination.html" . }}
-          </ul>
-      </div>
-    </div>
-    </nav>
-  </div>
+</div>
 
 </div>
 </div>
-</div>
+
 {{ end }}
