--- a/themes/lightbi/layouts/notes/notes.html
+++ b/themes/lightbi/layouts/notes/notes.html
@@ -1,37 +1,44 @@
 {{ define "main" }}
-
-<div class="intro-header no-img mt-10">
-</div>
-
-  <div class="container" role="main">
-    <div class="row"> 
-        {{ with .Content }}
-          <div class="well">
-            {{.}}
-          </div>
-        {{ end }}
  
-        {{ range where (.Paginator 9).Pages "Section" "notes"}}
-        {{ partial "post_preview_notes.html" .}}
-        {{end}}
-
-    </div>
-  </div>
-
   <div class="container">
-   <div class="row font-sans"> 
-     <div class="col-md-12 mt-10">
-        <nav aria-label="Page navigation">
-        <ul class= "pagination justify-content-end">  
-
-        {{ template "_internal/pagination.html" . }} 
-        </ul>
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+        <div class="tags-heading row text-center"> 
+          <h1 class="display-5 fw-bold lh-1 mb-3">{{ .Title }}</h1>
+          <hr class="small">
         </div>
       </div>
-      </nav>
-      
-      </div>
+    </div>
+  </div> 
+
+<div class="container" role="main">
+  <div class="row justify-content-md-center">
+    {{ with .Content }}
+    <div class="well">
+      {{.}}
+    </div>
+    {{ end }}
+
+    {{ range .Paginator.Pages }}
+    {{ partial "post_preview_notes.html" .}}
+    {{end}}
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="row font-sans">
+    <div class="col-md-12 mt-10">
+      <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-end">
+          {{ template "_internal/pagination.html" . }}
+        </ul>
     </div>
   </div>
-  
+  </nav>
+
+</div>
+</div>
+</div>
+
 {{ end }}
