--- a/themes/lightbi/layouts/partials/header.html
+++ b/themes/lightbi/layouts/partials/header.html
@@ -23,12 +23,16 @@
 
 {{ else }}
 <header class="header-section {{ if $bigimg }}has-img{{ end }}">
-
 <div class="intro-header no-img mt-10">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 xx">
         <div class="{{ .Type }}-heading">
+          {{ if eq .Type "tags" }}
+                <h1>{{ if .Data.Singular }}#{{ end }}{{ .Title }}</h1>
+                <hr class="small">
+          {{ end }}
+
           {{ if eq .Type "list" }}
           <h2>{{ if .Data.Singular }}#{{ end }}{{ .Title }}</h2>
           {{ else }} 
