--- a/themes/lightbi/layouts/partials/post_preview_notes.html
+++ b/themes/lightbi/layouts/partials/post_preview_notes.html
@@ -1,6 +1,7 @@
-<div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
-    <div class="card single-post-card-haiku shadow-effect bg-faded-light mb-3 ">
+<div class=" col-12 col-sm-12 col-md-8">
+    <div class="card mb-3 ">
         <div class="card-body">
+
             <h2 class="post-title">{{ .Title }}</h2>
             {{ if .Params.subtitle }}
             <h3 class="post-subtitle">
@@ -20,6 +21,14 @@
             </div>
 
         </div>
-        </a>
+        <!-- <div class="card-footer">
+                {{ if $.Param "socialShare" }} 
+                <section id="social-share">
+                  <div class="list-inline footer-links">
+                    {{ partial "share-links" . }}
+                  </div>
+                </section>
+                {{ end }}
+            </div>  -->
     </div>
 </div>
