--- a/themes/lightbi/layouts/partials/header.html
+++ b/themes/lightbi/layouts/partials/header.html
@@ -10,15 +10,7 @@
 {{ $bigimg := $.Scratch.Get "bigimg" }}
 {{ $title := $.Scratch.Get "title" }}
 {{ $subtitle := $.Scratch.Get "subtitle" }}
-
-{{ if or $bigimg $title }}
-{{ if $bigimg }}
-<div id="header-big-imgs" data-num-img={{len $bigimg}} {{range $i, $img := $bigimg}} {{ if (fileExists $img.src)}}
-  data-img-src-{{add $i 1}}="{{$img.src | absURL }}" {{else}} data-img-src-{{add $i 1}}="{{$img.src}}" {{end}}
-  {{ if $img.desc}}data-img-desc-{{add $i 1}}="{{$img.desc}}" {{end}} {{end}}></div>
-{{ end }}
-
-
+ 
 {{ if .IsHome }}
 
 {{ else }}
@@ -29,7 +21,7 @@
       <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 xx">
         <div class="{{ .Type }}-heading">
           {{ if eq .Type "tags" }}
-                <h1>{{ if .Data.Singular }}#{{ end }}{{ .Title }}</h1>
+          <h2 class="display-6 fw-bold lh-1 mb-3">{{ if .Data.Singular }}#{{ end }}{{ .Title }}</h2>
                 <hr class="small">
           {{ end }}
 
@@ -68,5 +60,4 @@
 </div>
 </header>
 
-{{ end }}
-{{ end }}
+{{ end }} 
