--- a/themes/lightbi/layouts/about/about.html
+++ b/themes/lightbi/layouts/about/about.html
@@ -1,16 +1,10 @@
 {{ define "main" }}
 
-<div class="about-section">
-  <div class="container">
-    <div class="row text-center">
-      <h1 class="display-5 fw-bold lh-1 mb-3">{{ .Title }}</h1>
-    </div>
-  </div>
-
+<div class="about-section"> 
   <div class="container">
     <div class="row flex-lg-row-reverse align-items-center">
       <div class="col-md-8 col-lg-4">
-        <img src="{{ "../../img/bino-about.jpg" }}" class="d-block mx-lg-auto img-fluid img-80" alt="Bino image">
+        <img src="{{ "/img/bino-about.jpg" }}" class="d-block mx-lg-auto img-fluid img-80" alt="Bino image">
       </div>
      
         <div class="col-md-8 col-lg-8">
