--- a/themes/lightbi/layouts/partials/footer.html
+++ b/themes/lightbi/layouts/partials/footer.html
@@ -15,9 +15,8 @@
           {{- if isset $.Site.Author .id }}
           <li>
             <a href="{{ printf .url (index $.Site.Author .id) }}" title="{{ .title }}" target="_blank">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-stack-2x"></i>
-                <i class="{{ .icon }} fa-stack-1x fa-inverse"></i>
+              <span class="mx-2">
+                <i class="{{ .icon }}"></i>
               </span>
             </a>
           </li>
@@ -26,9 +25,8 @@
           {{ if .Site.Params.rss }}
           <li>
             <a href="{{ with .OutputFormats.Get " RSS" }}{{ .RelPermalink }}{{ end }}" title="RSS">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-stack-2x"></i>
-                <i class="fas fa-rss fa-stack-1x fa-inverse"></i>
+              <span class="mx-2">
+                <i class="bi bi-rss"></i>
               </span>
             </a>
           </li>
@@ -74,34 +72,17 @@
 </footer>
 
 {{- if .Site.Params.selfHosted -}}
-<script src="{{ " js/jquery.min.js" | absURL }}"></script>
 <script src="{{ " js/bootstrap.min.js" | absURL }}"></script>
 {{- else -}}
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"
-  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 {{- end }}
 
-<script src="{{ " js/main.js" | absURL }}"></script>
 
-{{ if .Site.Params.gcse }}
-<script>
-  (function () {
-    var cx = '{{ .Site.Params.gcse }}';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-{{ end }}
 {{- if .Site.Params.useHLJS }}
-<script src="{{ " js/highlight.min.js" | absURL }}"></script>
-<script> hljs.initHighlightingOnLoad();</script>
-<script> $(document).ready(function () { $("pre.chroma").css("padding", "0"); });</script>
+<script src="{{ "js/highlight.min.js" | absURL }}"></script>
+<script> hljs.initHighlightingOnLoad(); </script>
+<script> $(document).ready(function() {$("pre.chroma").css("padding","0");}); </script>
 {{- end -}}
 
 {{- partial "footer_custom.html" . }}
