--- a/themes/lightbi/layouts/partials/head.html
+++ b/themes/lightbi/layouts/partials/head.html
@@ -29,7 +29,7 @@
 <meta name="description" content="Lightbi is a simple, minimal personal website and blog theme for Hugo. Built by Bino Kochumol Varghese">
 <!-- Site Title, Description, Author, and Favicon -->
 {{ if .IsHome }}
-<title>Home | Lightbi</title>
+<title>Home - Lightbi</title>
 {{- else }}
 {{- with ($.Scratch.Get "Title") }}
   <title>{{ . }} - {{ $.Site.Title }}</title>
@@ -49,9 +49,17 @@
 <!-- Hugo Version number -->
 {{ hugo.Generator -}}
 
-<!-- Links and stylesheets --><link rel="alternate" href="{{ "index.xml" | absLangURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<!-- Links and stylesheets -->
+{{- if .Site.Params.selfHosted -}}
+<link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/bootstrap-icons/bootstrap-icons.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
+{{- else -}}
+<link rel="alternate" href="{{ "index.xml" | absLangURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+{{- end }}
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
 
 {{- if .Site.Params.useHLJS }}
