--- a/themes/lightbi/layouts/partials/nav.html
+++ b/themes/lightbi/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top p-0">
   <div class="container">
-    <a class="navbar-brand" href="{{ "" | absLangURL }}">{{ .Site.Title }}</a>
+    <a class="fw-bold navbar-brand" href="{{ "" | absLangURL }}">{{ .Site.Title }}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
