--- a/themes/lightbi/layouts/partials/post_preview.html
+++ b/themes/lightbi/layouts/partials/post_preview.html
@@ -1,8 +1,9 @@
-<div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 pb-4">
-    <div class="card h-100 single-post-card shadow-effect">
+<div class="col-xl-4 col-lg-4 col-md-6 col-sm-6  mb-4">
+    <div class="card h-100 single-post-card shadow-effect bg-faded-light">
         <a href="{{ .Permalink }}">
             <div class="card-body">
-                <h2 class="post-title">{{ .Title }}</h2>
+
+                <h3 class="fw-bold post-title">{{ .Title }}</h3>
                 {{ if .Params.subtitle }}
                 <h3 class="post-subtitle">
                     {{ .Params.subtitle }}
@@ -26,18 +27,17 @@
                 <div class="read-more-section">
                     <h6><a href="{{ .Permalink }}" class="post-read-more">Read more</a> </h6>
                 </div>
-
-                {{ if .Params.image }}
-                <img src="{{ .Params.image }}" alt="{{ .Title }}" href="{{ .Permalink }}"
-                    class="card-img-bottom img-fluid " />
-                {{ end }}
-                {{ if .Params.video }}
-                <video loop autoplay muted playsinline class="img-title">
-                    <source src="{{ .Params.video }}">
-                </video>
-                {{ end }}
-
             </div>
+
+            {{ if .Params.image }}
+            <img src="{{ .Params.image }}" alt="{{ .Title }}" class="card-img-top img-fluid " />
+            {{ end }}
+            {{ if .Params.video }}
+            <video loop autoplay muted playsinline class="img-title">
+                <source src="{{ .Params.video }}">
+            </video>
+            {{ end }}
+        </a>
+        </a>
     </div>
-    </a>
-</div>
+</div> 
