notes section heading style and color modified

--- a/themes/lightbi/layouts/partials/post_preview_notes.html
+++ b/themes/lightbi/layouts/partials/post_preview_notes.html
@@ -2,7 +2,7 @@
     <div class="card mb-3 ">
         <div class="card-body">
 
-            <h2 class="post-title">{{ .Title }}</h2>
+            <h2 class="fw-bold post-title">{{ .Title }}</h2>
             {{ if .Params.subtitle }}
             <h3 class="post-subtitle">
                 {{ .Params.subtitle }}
