--- a/themes/lightbi/static/css/main.css
+++ b/themes/lightbi/static/css/main.css
@@ -426,7 +426,7 @@ footer .theme-by {
 .post-entry {
   width: 100%;
   margin-top: 10px;
-  color: #4B4F56; 
+  /* color: #4B4F56;  */
 }
 .post-image {
   float: right;
