--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -90,7 +90,7 @@
 
 
           {{ if .NextInSection }}
-          <li class="list-group-item ml-auto b-0">
+          <li class="list-group-item ms-auto b-0">
             <a type="button" class="btn btn-dark" role="button" href="{{ .NextInSection.Permalink }}"
               data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title }}">{{ i18n "nextPost" }}
               &rarr;</a>
@@ -105,8 +105,8 @@
     </div>
   </div>
 
-  <div class="bg-black">
-    <div class="container bg-black">
+  <div class="">
+    <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 mt-3">
           <h3>Read more</h3>
