--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -72,17 +72,18 @@
 </footer>
 
 {{- if .Site.Params.selfHosted -}}
+<script src="{{ "js/jquery-3.5.1.slim.min.js" | absURL }}"></script>
 <script src="{{ " js/bootstrap.min.js" | absURL }}"></script>
 {{- else -}}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 {{- end }}
 
 
 {{- if .Site.Params.useHLJS }}
 <script src="{{ "js/highlight.min.js" | absURL }}"></script>
 <script> hljs.initHighlightingOnLoad(); </script>
-<script> $(document).ready(function() {$("pre.chroma").css("padding","0");}); </script>
+<script> $(document).ready(function () { $("pre.chroma").css("padding", "0"); }); </script>
 {{- end -}}
-
+<script src="{{ "js/dark-mode.js" | absURL }}"></script>
 {{- partial "footer_custom.html" . }}
