--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -54,13 +54,14 @@
 <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}" />
 <link rel="stylesheet" href="{{ "css/bootstrap-icons/bootstrap-icons.css" | absURL }}" />
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
+
 {{- else -}}
 <link rel="alternate" href="{{ "index.xml" | absLangURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 {{- end }}
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
+<link disabled id="dark-mode-theme" rel="stylesheet" href="{{ "css/dark.css" | absURL }}" />
 
 {{- if .Site.Params.useHLJS }}
 <link rel="stylesheet" href="{{ "css/highlight.min.css" | absURL }}" />
